Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -468,3 +468,30 @@ CALL FUNCTION 'NUMBER_CHECK'
     number_range_not_extern = 2
     object_not_found        = 3.
 ```
+```abap
+REPORT ZPROGB03_0035.
+
+DATA: lv_number TYPE NUMC10.
+
+CALL FUNCTION 'NUMBER_GET_NEXT'
+  EXPORTING
+    nr_range_nr = 'A1'
+    object      = 'ZNUM_B03'
+ IMPORTING
+   NUMBER      = lv_number
+ EXCEPTIONS
+   INTERVAL_NOT_FOUND            = 1
+   NUMBER_RANGE_NOT_INTERN       = 2
+   OBJECT_NOT_FOUND              = 3
+   QUANTITY_IS_0                 = 4
+   QUANTITY_IS_NOT_1             = 5
+   INTERVAL_OVERFLOW             = 6
+   BUFFER_OVERFLOW               = 7
+   OTHERS      = 8.
+
+IF sy-subrc = 0.
+  WRITE: lv_number.
+ELSE.
+  EXIT.
+ENDIF.
+```
