--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="187" height="151" alt="image" src="https://github.com/user-attachments/assets/172522dd-e1db-4e35-b58d-d2c9e89da7b0" />## <  핵심 개념 >
 </br>
 
 - **서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
@@ -325,14 +325,15 @@ CALL FUNCTION 'DEQUEUE_EZ_WORKB03'
 </br>
 
 - Lock을 걸 대상 테이블(SPFLI)과 어떤 방식으로 잠글지 정하는 화면
+- `primary table` : 락을 설정할 테이블
 <img width="503" height="220" alt="image" src="https://github.com/user-attachments/assets/d5d730e6-e767-445c-bbaf-8b2248ca9fc7" />
 </br>
 
+- 드롭다운 리스트에서 키 값(S, O, E, X 등) 을 함께 표시하도록 하는 옵션
 <img width="501" height="261" alt="image" src="https://github.com/user-attachments/assets/056eaeb6-c3e6-4e45-b6ad-f4b03b9a7925" />
 </br>
 </br>
 
-- 드롭다운 리스트에서 키 값(S, O, E, X 등) 을 함께 표시하도록 하는 옵션
 <img width="484" height="376" alt="image" src="https://github.com/user-attachments/assets/e735aae2-0c76-4f13-875d-69fbc9f1d63a" />
 </br>
 </br>
