Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -469,6 +469,15 @@ CALL FUNCTION 'NUMBER_CHECK'
     number_range_not_extern = 2
     object_not_found        = 3.
 ```
+</br>
+</br>
+
+<img width="492" height="282" alt="image" src="https://github.com/user-attachments/assets/83103505-1afd-4666-9bf2-7d1bde67045e" />
+</br>
+
+<img width="364" height="99" alt="image" src="https://github.com/user-attachments/assets/c187b9e3-1763-4e75-a57e-b5fe3cb53210" />
+</br>
+
 ```abap
 REPORT ZPROGB03_0035.
 
