Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -472,10 +472,14 @@ CALL FUNCTION 'NUMBER_CHECK'
 </br>
 </br>
 
+- 번호 범위를 정해두고 순서대로 번호를 발급하는 과정
 <img width="492" height="282" alt="image" src="https://github.com/user-attachments/assets/83103505-1afd-4666-9bf2-7d1bde67045e" />
 </br>
 
 <img width="364" height="99" alt="image" src="https://github.com/user-attachments/assets/c187b9e3-1763-4e75-a57e-b5fe3cb53210" />
+</br>
+
+<img width="526" height="86" alt="image" src="https://github.com/user-attachments/assets/bcd30086-2172-4876-a8c3-4262f4f100e7" />
 </br>
 
 ```abap
