--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -509,3 +509,17 @@ ELSE.
   EXIT.
 ENDIF.
 ```
+</br>
+
+- 현재까지 사용된 마지막 번호 확인
+<img width="528" height="87" alt="image" src="https://github.com/user-attachments/assets/ee38de26-11bd-4415-9da0-856c7684d883" />
+</br>
+
+<img width="380" height="111" alt="image" src="https://github.com/user-attachments/assets/c2e42be0-a083-4666-9d3b-050bd211b684" />
+</br>
+
+<img width="523" height="90" alt="image" src="https://github.com/user-attachments/assets/c813b8e0-5523-4bf6-9346-99aad5b773d4" />
+</br>
+
+<img width="528" height="88" alt="image" src="https://github.com/user-attachments/assets/0910bf1b-eecd-49b6-b57e-b85958e6d321" />
+
