--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -515,11 +515,13 @@ ENDIF.
 <img width="528" height="87" alt="image" src="https://github.com/user-attachments/assets/ee38de26-11bd-4415-9da0-856c7684d883" />
 </br>
 
+- NR Status에서 값을 직접 바꿔서 마지막 사용 번호를 수정
 <img width="380" height="111" alt="image" src="https://github.com/user-attachments/assets/c2e42be0-a083-4666-9d3b-050bd211b684" />
 </br>
 
 <img width="523" height="90" alt="image" src="https://github.com/user-attachments/assets/c813b8e0-5523-4bf6-9346-99aad5b773d4" />
 </br>
 
+- 결과 확인
 <img width="528" height="88" alt="image" src="https://github.com/user-attachments/assets/0910bf1b-eecd-49b6-b57e-b85958e6d321" />
 
