Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -489,6 +489,7 @@ REPORT ZPROGB03_0035.
 
 DATA: lv_number TYPE NUMC10.
 
+*************** Number Range 다음 번호 채번 ****************
 CALL FUNCTION 'NUMBER_GET_NEXT'
   EXPORTING
     nr_range_nr = 'A1'
@@ -528,4 +529,22 @@ ENDIF.
 
 - 수정된 번호 결과 확인
 <img width="528" height="88" alt="image" src="https://github.com/user-attachments/assets/0910bf1b-eecd-49b6-b57e-b85958e6d321" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
 
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+</br>
+
+- 문제
+<img width="511" height="282" alt="image" src="https://github.com/user-attachments/assets/56ea4bab-cb52-4033-8302-5f466be2b68c" />
