Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -547,6 +547,19 @@ ENDIF.
 </br>
 
 - 문제
+- Number Range 실습
 </br>
 
 <img width="426" height="235" alt="image" src="https://github.com/user-attachments/assets/a055f4dd-2cc4-4f10-82aa-5d200ce1446f" />
+</br>
+</br>
+</br>
+
+**1) Number Range Object 생성**
+<img width="446" height="271" alt="image" src="https://github.com/user-attachments/assets/75d8940f-3d14-4b1d-b942-88a5a586445f" />
+</br>
+</br>
+
+- NR Status를 29로 설정 -> 30부터 시작이므로
+<img width="538" height="87" alt="image" src="https://github.com/user-attachments/assets/9c8e782c-7492-4843-a054-9fb29bce36b5" />
+
