Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -563,4 +563,59 @@ ENDIF.
 
 - NR Status를 29로 설정 -> 30부터 시작이므로
 <img width="538" height="87" alt="image" src="https://github.com/user-attachments/assets/9c8e782c-7492-4843-a054-9fb29bce36b5" />
+</br>
+</br>
+</br>
 
+**2) Program 코드 생성**
+```abap
+REPORT ZBC400_B03_PRACTICE9.
+
+DATA: gv_num TYPE S_BUSPANUM,
+      gv_cnt TYPE I VALUE 31.
+PARAMETERS: pa_num TYPE I.
+
+DO pa_num TIMES.
+  PERFORM number_get_next CHANGING gv_num gv_cnt.
+ENDDO.
+
+*&---------------------------------------------------------------------*
+
+FORM number_get_next CHANGING gv_num TYPE S_BUSPANUM
+                              gv_cnt TYPE I.
+  DATA: gs_data TYPE ZTSCUSTOM_B03.
+
+  CALL FUNCTION 'NUMBER_GET_NEXT'
+    EXPORTING
+      nr_range_nr = '01'
+      object      = 'ZNO_B03'
+    IMPORTING
+      NUMBER      = gv_num
+    EXCEPTIONS
+      INTERVAL_NOT_FOUND            = 1
+      NUMBER_RANGE_NOT_INTERN       = 2
+      OBJECT_NOT_FOUND              = 3
+      QUANTITY_IS_0                 = 4
+      QUANTITY_IS_NOT_1             = 5
+      INTERVAL_OVERFLOW             = 6
+      BUFFER_OVERFLOW               = 7
+      OTHERS      = 8.
+
+  gs_data-id = gv_cnt.
+  gs_data-NUM_RANGE = gv_num.
+  INSERT ZTSCUSTOM_B03 FROM gs_data.
+  gv_cnt = gv_cnt + 1.
+
+  IF sy-subrc = 0.
+    WRITE:/ gv_num.
+  ELSE.
+    EXIT.
+  ENDIF.
+ENDFORM.
+```
+</br>
+
+**3) 결과 확인**
+- 20 입력
+  
+<img width="291" height="337" alt="image" src="https://github.com/user-attachments/assets/53789814-0067-4db5-a8c0-a52ee30efb3a" />
