Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -619,3 +619,6 @@ ENDFORM.
 - 20 입력
   
 <img width="291" height="337" alt="image" src="https://github.com/user-attachments/assets/53789814-0067-4db5-a8c0-a52ee30efb3a" />
+</br>
+
+<img width="493" height="334" alt="image" src="https://github.com/user-attachments/assets/499ce86c-796b-4dc8-ba8f-e68ae1a0253d" />
