Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -572,17 +572,21 @@ ENDIF.
 REPORT ZBC400_B03_PRACTICE9.
 
 DATA: gv_num TYPE S_BUSPANUM,
-      gv_cnt TYPE I VALUE 31.
+      gv_cnt TYPE I VALUE 31,
+      gt_data TYPE TABLE OF ZTSCUSTOM_B03.
 PARAMETERS: pa_num TYPE I.
 
 DO pa_num TIMES.
-  PERFORM number_get_next CHANGING gv_num gv_cnt.
+  PERFORM number_get_next CHANGING gv_num gv_cnt gt_data.
 ENDDO.
+
+INSERT ZTSCUSTOM_B03 FROM TABLE gt_data.
 
 *&---------------------------------------------------------------------*
 
 FORM number_get_next CHANGING gv_num TYPE S_BUSPANUM
-                              gv_cnt TYPE I.
+                              gv_cnt TYPE I
+                              gt_data LIKE gt_data.
   DATA: gs_data TYPE ZTSCUSTOM_B03.
 
   CALL FUNCTION 'NUMBER_GET_NEXT'
@@ -600,10 +604,9 @@ FORM number_get_next CHANGING gv_num TYPE S_BUSPANUM
       INTERVAL_OVERFLOW             = 6
       BUFFER_OVERFLOW               = 7
       OTHERS      = 8.
-
   gs_data-id = gv_cnt.
   gs_data-NUM_RANGE = gv_num.
-  INSERT ZTSCUSTOM_B03 FROM gs_data.
+  APPEND gs_data TO gt_data.
   gv_cnt = gv_cnt + 1.
 
   IF sy-subrc = 0.
@@ -611,6 +614,7 @@ FORM number_get_next CHANGING gv_num TYPE S_BUSPANUM
   ELSE.
     EXIT.
   ENDIF.
+
 ENDFORM.
 ```
 </br>
