Update 3-2. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -1,8 +1,13 @@
 ## <  핵심 개념 >
+- **1) 암묵적 / 명시적 COMMIT / ROLLBACK**
+- **2) PERFORM ON COMMIT**
+- **3) Update Module (업데이트 모듈)**
+- **4) Lock (SE11, SM12)**
+- **5) CALL TRANSACTION MODE·UPDATE 및 호출 방식 요약**
+- **6) Number Range (TCODE: `SNRO`)**
 </br>
 
-- **서브스크린 생성시 LAYOUT에 서브스크린 지정 필수**
-- **`MEMORY ID` 는 PARAMETERS, SELECT-OPTIONS에서만 선언 가능 (DATA는 불가능)**
+- **반복문(LOOP) 안에서 DB 테이블 직접 UPDATE 하면 안 됨**
 </br>
 </br>
 
