--- a/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-2. 프로그래밍 DB 활용 개발(01.08).md
@@ -416,6 +416,7 @@ CALL TRANSACTION 'T3'
 - `Number Length Domain` 은 필수값이며, 도메인에서 `NUMC` 또는 `CHAR` 타입으로 정의하고 최대 20자리까지 가능
 - `% Warning` 은 번호 범위 사용률이 `0.1 ~ 99.9%` 에 도달하면 경고를 주는 기준이며, 보통 10.0으로 설정함
 - `No rolling` 은 번호 범위를 다 써도 다시 처음으로 돌아가지 않고 더 이상 번호를 부여하지 않는 설정
+- `To business year flag` 는 데이터를 사업연도(연도별)로 구분해서 관리 가능하게 해주는 표시
 - `NR Status` 는 현재까지 채번된 번호
 
 <img width="508" height="316" alt="image" src="https://github.com/user-attachments/assets/dbcfea6c-aab7-424f-968d-1c70d07578c4" />
