Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -1,4 +1,6 @@
+### 1) EXIT
 - ALV에서 수정 허용 여부나 처리 대상을 판단하려고, 실제 DB 필드와 별도로 플래그 필드를 구조에 추가해서 로직 제어함
+- ALV에서 해당 컬럼을 사용자가 수정 가능하도록 설정하는 UI 플래그
 ```abap
 gs_fcat-edit = 'X'.
 ```
