Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -4,3 +4,11 @@
 ```abap
 gs_fcat-edit = 'X'.
 ```
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'EDIT'.
+      PERFORM set_edit_rows.
+  ENDCASE.
+ENDMODULE.
+```
