Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -5,10 +5,52 @@
 gs_fcat-edit = 'X'.
 ```
 ```abap
+********* PAI *********
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'EDIT'.
       PERFORM set_edit_rows.
   ENDCASE.
 ENDMODULE.
+
+********* F01 *********
+FORM set_edit_rows.
+  DATA: lt_index_rows TYPE lvc_t_row,
+        ls_index_row TYPE lvc_s_row.
+
+  CALL METHOD go_alv->get_selected_rows
+    IMPORTING
+      et_index_rows = lt_index_rows.
+
+  IF lt_index_rows IS INITIAL.
+    MESSAGE '변경할 데이터를 선택하세요' TYPE 'I'.
+    EXIT.
+  ENDIF.
+
+  " 기존에 변경모드로 설정되어있던 셀들 초기화
+  LOOP AT gt_data INTO gs_data WHERE it_cell_style IS NOT INITIAL.
+    DELETE gs_data-it_cell_style WHERE fieldname = 'INVOICE'.
+    MODIFY gt_data FROM gs_data TRANSPORTING it_cell_style.
+  ENDLOOP.
+
+  " 선택한 Row 기준으로 변경모드 세팅
+  LOOP AT lt_index_rows INTO ls_index_row.
+    CLEAR: gs_data, gs_cell_style.
+    READ TABLE gt_data INTO gs_data INDEX ls_index_row-index.
+    IF sy-subrc = 0.
+      gs_cell_style-fieldname = 'INVOICE'.
+      gs_cell_style-style = cl_gui_alv_grid=>mc_style_enabled.
+      INSERT gs_cell_style INTO TABLE gs_data-it_cell_style.
+      MODIFY gt_data FROM gs_data INDEX ls_index_row-index
+      TRANSPORTING it_cell_style.
+    ENDIF.
+  ENDLOOP.
+
+  " Edit 활성화
+  CALL METHOD go_alv->set_ready_for_input
+    EXPORTING i_ready_for_input = 1.
+
+  " ALV Refresh
+  CALL METHOD go_alv->refresh_table_display.
+ENDFORM.
 ```
