--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -5,7 +5,9 @@
 gs_fcat-edit = 'X'.
 ```
 ```abap
-********* PAI *********
+*************** TOP ****************
+
+*************** PAI ****************
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
     WHEN 'EDIT'.
@@ -13,7 +15,7 @@ MODULE user_command_0100 INPUT.
   ENDCASE.
 ENDMODULE.
 
-********* F01 *********
+*************** F01 ****************
 FORM set_edit_rows.
   DATA: lt_index_rows TYPE lvc_t_row,
         ls_index_row TYPE lvc_s_row.
@@ -53,4 +55,10 @@ FORM set_edit_rows.
   " ALV Refresh
   CALL METHOD go_alv->refresh_table_display.
 ENDFORM.
+
+FORM set_layout.
+  gs_layout-stylefname = 'IT_CELL_STYLE'.
+ENDFORM.
+
+*************** PBO ****************
 ```
