Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -61,4 +61,9 @@ FORM set_layout.
 ENDFORM.
 
 *************** PBO ****************
+CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        is_layout                     = gs_layout
+      CHANGING
+        it_outtab                     = gt_data.
 ```
