Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -6,6 +6,12 @@ gs_fcat-edit = 'X'.
 ```
 ```abap
 *************** TOP ****************
+DATA: gs_layout TYPE LVC_S_LAYO.
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: it_cell_style TYPE LVC_T_STYL,
+     END OF gs_data.
+DATA gs_cell_style TYPE LVC_S_STYL.
 
 *************** PAI ****************
 MODULE user_command_0100 INPUT.
