--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -4,6 +4,8 @@
 ```abap
 gs_fcat-edit = 'X'.
 ```
+- `cl_gui_alv_grid=>mc_style_enabled` : ALV에서 특정 셀만 수정 가능하게 만드는 셀 스타일 플래그
+- `set_ready_for_input` : ALV 그리드를 수정 모드로 켜고/끄는 스위치
 ```abap
 *************** TOP ****************
 DATA: gs_layout TYPE LVC_S_LAYO.
