Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -1,9 +1,9 @@
-### 1) EXIT
-- ALV에서 수정 허용 여부나 처리 대상을 판단하려고, 실제 DB 필드와 별도로 플래그 필드를 구조에 추가해서 로직 제어함
+### 1) ALV 셀 단위 Edit 제어
 - ALV에서 해당 컬럼을 사용자가 수정 가능하도록 설정하는 UI 플래그
 ```abap
 gs_fcat-edit = 'X'.
 ```
+- 선택한 ALV 행의 INVOICE 컬럼만 수정 가능하도록, 버튼(EDIT) 클릭 시 셀 단위로 Edit 모드를 켜는 로직
 - `cl_gui_alv_grid=>mc_style_enabled` : ALV에서 특정 셀만 수정 가능하게 만드는 셀 스타일 플래그
 - `set_ready_for_input` : ALV 그리드를 수정 모드로 켜고/끄는 스위치
 ```abap
