Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -1,5 +1,5 @@
 ### 1) ALV 셀 단위 Edit 제어
-- ALV에서 해당 컬럼을 사용자가 수정 가능하도록 설정하는 UI 플래그
+- 필드카탈로그를 이용해 해당 컬럼을 ALV에서 수정 가능하도록 설정하는 UI 플래그
 ```abap
 gs_fcat-edit = 'X'.
 ```
