--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -77,3 +77,8 @@ CALL METHOD go_alv->set_table_for_first_display
       CHANGING
         it_outtab = gt_data.
 ```
+</br>
+
+- 결과: 특정 열 수정 가능
+  
+<img width="502" height="297" alt="image" src="https://github.com/user-attachments/assets/2a4f9024-0f91-4619-9935-11df9ed4d17b" />
