Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -436,3 +436,8 @@ MODULE exit INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+
+**7) 결과 확인**
+
+<img width="512" height="309" alt="image" src="https://github.com/user-attachments/assets/6797cf68-25f3-4baf-a039-5f92b72884aa" />
