Update 3-4. 프로그래밍 DB 활용 개발(01.09).md

--- a/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
+++ b/ABAP 심화/3-4. 프로그래밍 DB 활용 개발(01.09).md
@@ -1,3 +1,12 @@
+## <  핵심 개념 >
+- **1) `CALL METHOD go_alv->check_changed_data.` : ALV에 바인딩된 it_outtab 내부테이블의 변경사항을 반영함**
+</br>
+</br>
+
+---
+
+</br>
+
 ## < ALV 셀 단위 편집(Edit) 제어 구현 >
 </br>
 
