Update 5-2. 프로그래밍 전용 리포트 개발(총 정리).md

--- a/ABAP 심화/5-2. 프로그래밍 전용 리포트 개발(총 정리).md
+++ b/ABAP 심화/5-2. 프로그래밍 전용 리포트 개발(총 정리).md
@@ -7674,3 +7674,466 @@ ENDFORM.
 </br>
 </br>
 </br>
+
+# 01/09
+</br>
+</br>
+
+## <  핵심 개념 >
+- **1) `CALL METHOD go_alv->check_changed_data.` : ALV에 바인딩된 it_outtab 내부테이블의 변경사항을 반영함**
+</br>
+</br>
+
+---
+
+</br>
+
+## < ALV 셀 단위 편집(Edit) 제어 구현 >
+</br>
+
+### 1) ALV 셀 단위 Edit 제어
+- 필드카탈로그를 이용해 해당 컬럼을 ALV에서 수정 가능하도록 설정하는 UI 플래그
+```abap
+gs_fcat-edit = 'X'.
+```
+- 선택한 ALV 행의 INVOICE 컬럼만 수정 가능하도록, 버튼(EDIT) 클릭 시 셀 단위로 Edit 모드를 켜는 로직
+- `cl_gui_alv_grid=>mc_style_enabled` : ALV에서 특정 셀만 수정 가능하게 만드는 셀 스타일 플래그
+- `set_ready_for_input` : ALV 그리드를 수정 모드로 켜고/끄는 스위치
+```abap
+REPORT ZPROGB03_0029.
+
+*************** TOP ****************
+DATA: gs_layout TYPE LVC_S_LAYO.
+DATA: BEGIN OF gs_data.
+        INCLUDE TYPE sbook.
+DATA: it_cell_style TYPE LVC_T_STYL,
+     END OF gs_data.
+DATA gs_cell_style TYPE LVC_S_STYL.
+
+*************** PAI ****************
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'EDIT'.
+      PERFORM set_edit_rows.
+  ENDCASE.
+ENDMODULE.
+
+*************** F01 ****************
+FORM set_edit_rows.
+  DATA: lt_index_rows TYPE lvc_t_row,
+        ls_index_row TYPE lvc_s_row.
+
+  CALL METHOD go_alv->get_selected_rows
+    IMPORTING
+      et_index_rows = lt_index_rows.
+
+  IF lt_index_rows IS INITIAL.
+    MESSAGE '변경할 데이터를 선택하세요' TYPE 'I'.
+    EXIT.
+  ENDIF.
+
+  " 기존에 변경모드로 설정되어있던 셀들 초기화
+  LOOP AT gt_data INTO gs_data WHERE it_cell_style IS NOT INITIAL.
+    DELETE gs_data-it_cell_style WHERE fieldname = 'INVOICE'.
+    MODIFY gt_data FROM gs_data TRANSPORTING it_cell_style.
+  ENDLOOP.
+
+  " 선택한 Row 기준으로 변경모드 세팅
+  LOOP AT lt_index_rows INTO ls_index_row.
+    CLEAR: gs_data, gs_cell_style.
+    READ TABLE gt_data INTO gs_data INDEX ls_index_row-index.
+    IF sy-subrc = 0.
+      gs_cell_style-fieldname = 'INVOICE'.
+      gs_cell_style-style = cl_gui_alv_grid=>mc_style_enabled.
+      INSERT gs_cell_style INTO TABLE gs_data-it_cell_style.
+      MODIFY gt_data FROM gs_data INDEX ls_index_row-index
+      TRANSPORTING it_cell_style.
+    ENDIF.
+  ENDLOOP.
+
+  " Edit 활성화
+  CALL METHOD go_alv->set_ready_for_input
+    EXPORTING i_ready_for_input = 1.
+
+  " ALV Refresh
+  CALL METHOD go_alv->refresh_table_display.
+ENDFORM.
+
+FORM set_layout.
+  gs_layout-stylefname = 'IT_CELL_STYLE'.
+ENDFORM.
+
+*************** PBO ****************
+CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        is_layout = gs_layout
+      CHANGING
+        it_outtab = gt_data.
+```
+</br>
+
+- 결과: 특정 열 수정 가능
+  
+<img width="502" height="297" alt="image" src="https://github.com/user-attachments/assets/2a4f9024-0f91-4619-9935-11df9ed4d17b" />
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 팀과제 - 실습 코드 >
+- 프로그램 코드 : `ZDSBOOK_CL222_01`
+- `CALL METHOD go_alv->check_changed_data.` : ALV에 바인딩된 it_outtab 내부테이블의 변경사항을 반영함
+</br>
+</br>
+
+**1) Report 프로그램 생성**
+```abap
+REPORT ZDSBOOK_CL222.
+
+INCLUDE ZDSBOOK_CL222_TOP.
+INCLUDE ZDSBOOK_CL222_C01.
+INCLUDE ZDSBOOK_CL222_F01.
+INCLUDE ZDSBOOK_CL222_O01.
+INCLUDE ZDSBOOK_CL222_I01.
+
+START-OF-SELECTION.
+  PERFORM set_data.
+  CALL SCREEN 100.
+```
+</br>
+
+**2) Screen 100 코드에 서브스크린 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ CALL SUBSCREEN SUB INCLUDING sy-repid '110'.
+ MODULE init_alv.
+ MODULE CLEAR_OK_CODE.
+
+PROCESS AFTER INPUT.
+ MODULE exit AT EXIT-COMMAND.
+ CALL SUBSCREEN SUB.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**3) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZDSBOOK_CL222_01_TOP
+*&---------------------------------------------------------------------*
+
+DATA: go_alv TYPE REF TO cl_gui_alv_grid,
+      go_dock TYPE REF TO cl_gui_docking_container.
+
+DATA: BEGIN OF gs_sbook.
+        INCLUDE TYPE ZTBOOK_CL222.
+DATA: it_cell_style TYPE LVC_T_STYL,
+      update_cell TYPE icon-id,
+     END OF gs_sbook.
+DATA: gt_sbook LIKE TABLE OF gs_sbook.
+DATA: gt_data TYPE TABLE OF ZTBOOK_CL222,
+      gs_data LIKE LINE OF gt_data.
+
+DATA gs_cell_style TYPE LVC_S_STYL.
+DATA save_flag TYPE I.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: gs_layout TYPE LVC_S_LAYO.
+DATA: gt_fcat TYPE LVC_T_FCAT,
+      gs_fcat TYPE LVC_S_FCAT.
+
+SELECTION-SCREEN BEGIN OF SCREEN 110 AS SUBSCREEN.
+  SELECT-OPTIONS: pa_car FOR gs_sbook-carrid DEFAULT 'AA',
+                  pa_con FOR gs_sbook-connid DEFAULT '17',
+                  pa_fld FOR gs_sbook-fldate DEFAULT '20250508'.
+SELECTION-SCREEN END OF SCREEN 110.
+```
+</br>
+
+**3) `C01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZDSBOOK_CL222_01_C01
+*&---------------------------------------------------------------------*
+
+CLASS lcl_event_handler DEFINITION.
+  PUBLIC SECTION.
+  CLASS-METHODS: on_toolbar FOR EVENT toolbar
+    OF cl_gui_alv_grid IMPORTING e_object,
+      on_user_command FOR EVENT user_command
+    OF cl_gui_alv_grid IMPORTING e_ucomm.
+ENDCLASS.
+
+CLASS lcl_event_handler IMPLEMENTATION.
+  METHOD on_toolbar.
+    DATA ls_button TYPE STB_BUTTON.
+    ls_button-butn_type = 3.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+
+    CLEAR ls_button.
+    ls_button-function = 'UPDATE'.
+    ls_button-icon = ICON_EXPAND.
+    ls_button-butn_type = 0.
+    ls_button-text = 'UPDATE'.
+    INSERT ls_button INTO TABLE e_object->mt_toolbar.
+  ENDMETHOD.
+
+  METHOD on_user_command.
+    CASE e_ucomm.
+      WHEN 'UPDATE'.
+        DATA: lt_select_data TYPE LVC_T_ROW,
+              ls_select_data TYPE LVC_S_ROW.
+
+        CALL METHOD go_alv->get_selected_rows
+          IMPORTING
+            et_index_rows = lt_select_data.
+
+        READ TABLE gt_sbook TRANSPORTING NO FIELDS
+          WITH KEY update_cell = ICON_CHANGE.
+        IF sy-subrc = 0.
+          MESSAGE '이미 수정중인 셀이 있습니다.' TYPE 'I'.
+        ELSE.
+          IF lt_select_data IS INITIAL.
+            MESSAGE '변경할 데이터를 선택하세요' TYPE 'I'.
+          ELSE.
+            PERFORM update_data USING lt_select_data ls_select_data.
+          ENDIF.
+        ENDIF.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDMETHOD.
+ENDCLASS.
+```
+</br>
+
+**4) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZDSBOOK_CL222_01_F01
+*&---------------------------------------------------------------------*
+
+FORM set_data .
+* 초기 설정
+*  SELECT * from sbook
+*    INTO CORRESPONDING FIELDS OF TABLE gt_data
+*    WHERE cancelled = 'X'.
+*
+*  SORT gt_data BY carrid connid fldate.
+*  INSERT ztbook_cl222 FROM TABLE gt_data
+*    ACCEPTING DUPLICATE KEYS.
+
+  SELECT * from ztbook_cl222
+    INTO CORRESPONDING FIELDS OF TABLE gt_sbook
+    WHERE carrid IN pa_car
+      AND connid IN pa_con
+      AND fldate IN pa_fld.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM update_data USING lt_select_data TYPE LVC_T_ROW
+                       ls_select_data TYPE LVC_S_ROW.
+  READ TABLE gt_sbook TRANSPORTING NO FIELDS
+       WITH KEY update_cell = ICON_CHANGE.
+  IF sy-subrc = 0.
+    MESSAGE '이미 수정중인 셀이 있습니다.' TYPE 'I'.
+  ELSE.
+    save_flag = 1.
+    LOOP AT gt_sbook INTO gs_sbook WHERE it_cell_style IS NOT INITIAL.
+      DELETE gs_sbook-it_cell_style WHERE fieldname = 'REFUND'.
+      MODIFY gt_sbook FROM gs_sbook TRANSPORTING it_cell_style.
+    ENDLOOP.
+
+    LOOP AT lt_select_data INTO ls_select_data.
+      CLEAR: gs_sbook-it_cell_style, gs_cell_style.
+      READ TABLE gt_sbook INTO gs_sbook INDEX ls_select_data-index.
+      IF sy-subrc = 0.
+        gs_cell_style-fieldname = 'REFUND'.
+        gs_cell_style-style = cl_gui_alv_grid=>mc_style_enabled.
+        INSERT gs_cell_style INTO TABLE gs_sbook-it_cell_style.
+
+        gs_sbook-update_cell = ICON_CHANGE.
+
+        MODIFY gt_sbook FROM gs_sbook INDEX ls_select_data-index
+        TRANSPORTING it_cell_style update_cell.
+      ENDIF.
+    ENDLOOP.
+
+    CALL METHOD go_alv->set_ready_for_input
+      EXPORTING i_ready_for_input = 1.
+    CALL METHOD go_alv->refresh_table_display.
+  ENDIF.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_layout .
+  gs_layout-sel_mode = 'A'.
+  gs_layout-stylefname = 'IT_CELL_STYLE'.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM set_fieldcat .
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'REFUND'.
+  gs_fcat-coltext = '환불여부'.
+  gs_fcat-checkbox = 'X'.
+  gs_fcat-col_pos = 2.
+  APPEND gs_fcat TO gt_fcat.
+
+  CLEAR gs_fcat.
+  gs_fcat-fieldname = 'UPDATE_CELL'.
+  gs_fcat-coltext = '수정중'.
+  gs_fcat-icon = 'X'.
+  gs_fcat-col_pos = 1.
+  APPEND gs_fcat TO gt_fcat.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM select_data .
+  SELECT * from ztbook_cl222
+    INTO CORRESPONDING FIELDS OF TABLE gt_sbook
+    WHERE carrid IN pa_car
+      AND connid IN pa_con
+      AND fldate IN pa_fld.
+  SORT gt_sbook BY carrid connid fldate.
+ENDFORM.
+
+*&---------------------------------------------------------------------*
+
+FORM save_data .
+  CALL METHOD go_alv->check_changed_data.
+
+  CLEAR gt_data.
+  LOOP AT gt_sbook INTO gs_sbook.
+    CLEAR gs_data.
+    MOVE-CORRESPONDING gs_sbook TO gs_data.
+    APPEND gs_data TO gt_data.
+  ENDLOOP.
+
+  UPDATE ztbook_cl222 FROM TABLE gt_data.
+
+  LOOP AT gt_sbook INTO gs_sbook WHERE update_cell = ICON_CHANGE.
+    CLEAR gs_sbook-update_cell.
+    DELETE gs_sbook-it_cell_style WHERE fieldname = 'REFUND'.
+
+    MODIFY gt_sbook FROM gs_sbook INDEX sy-tabix.
+  ENDLOOP.
+
+  CALL METHOD go_alv->refresh_table_display.
+  IF sy-subrc = 0.
+    MESSAGE '저장되었습니다.' TYPE 'I'.
+  ENDIF.
+ENDFORM.
+```
+</br>
+
+**5) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZDSBOOK_CL222_01_O01
+*&---------------------------------------------------------------------*
+
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE init_alv OUTPUT.
+  IF go_dock IS INITIAL.
+    CREATE OBJECT go_dock
+      EXPORTING
+        side = cl_gui_docking_container=>dock_at_bottom
+        extension = 400
+        repid = sy-repid
+        dynnr = sy-dynnr.
+    CREATE OBJECT go_alv
+      EXPORTING
+        i_parent = go_dock.
+
+    PERFORM set_layout.
+    PERFORM set_fieldcat.
+    SET HANDLER lcl_event_handler=>on_toolbar FOR go_alv.
+    SET HANDLER lcl_event_handler=>on_user_command FOR go_alv.
+    CALL METHOD go_alv->set_table_for_first_display
+      EXPORTING
+        is_layout                     = gs_layout
+        i_structure_name              = 'ZTBOOK_CL222'
+      CHANGING
+        it_outtab                     = gt_sbook
+        it_fieldcatalog               = gt_fcat
+      EXCEPTIONS
+        invalid_parameter_combination = 1
+        program_error                 = 2
+        too_many_lines                = 3
+        others                        = 4.
+
+    IF sy-subrc <> 0.
+      MESSAGE '데이터 조회 중 오류 발생' TYPE 'E'.
+    ENDIF.
+  ELSE.
+    CALL METHOD go_alv->refresh_table_display
+      EXCEPTIONS
+        finished       = 1
+        others         = 2.
+  ENDIF.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
+</br>
+
+**6) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          ZDSBOOK_CL222_01_I01
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'ENTER' OR ''.
+      PERFORM select_data.
+    WHEN 'SAVE'.
+      PERFORM save_data.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE exit INPUT.
+  CASE OK_CODE.
+    WHEN 'CANCEL'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**7) 결과 확인**
+
+<img width="512" height="309" alt="image" src="https://github.com/user-attachments/assets/6797cf68-25f3-4baf-a039-5f92b72884aa" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
