Update 3-3. 프로그래밍 DB 활용 개발(01.08).md

--- a/ABAP 심화/3-3. 프로그래밍 DB 활용 개발(01.08).md
+++ b/ABAP 심화/3-3. 프로그래밍 DB 활용 개발(01.08).md
@@ -114,7 +114,7 @@ ENDIF.
 
 ### 2) PERFORM ON COMMIT
 - COMMIT WORK가 실행된 뒤 등록된 FORM들을 시스템 테이블에 쌓아두었다가 순서대로 실행
-- 실행 시점은 DB COMMIT 이후이므로, FORM 안에서 에러(MESSAGE A/X)가 발생해도 이미 저장된 DB 변경은 되돌릴 수 없음
+- ON COMMIT으로 묶인 Update Task는 하나라도 실패하면 전부 롤백
 ```abap
 PERFORM x ON COMMIT.
 PERFORM y ON COMMIT.
