Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -7,7 +7,26 @@
 
 </br>
 
-## < Function Group >
+## < ABAP 클래스 정의 기본 구조 >
 </br>
 
-- 전역 데이터를 공유하며 상태를 유지하는 함수 묶음 (객체처럼 사용)
+- ABAP 클래스는 DEFINITION에서 구조를 선언하고, IMPLEMENTATION에서 동작을 구현
+```abap
+CLASS class_name DEFINITION.
+  TYPES: local_type TYPE i.                   " 타입 정의
+  CONSTANTS: gc_max TYPE i VALUE 100.         " 상수 정의
+
+  " 속성(Attribute) 정의
+  DATA: variable1 TYPE local_type,            " 로컬 타입
+        variable2 TYPE global_type,           " 글로벌 타입
+        variable3 LIKE variable1,             " 기존 변수와 동일 타입
+
+        variable4 TYPE i VALUE 10,            " 기본값 지정
+        variable5 TYPE string READ-ONLY,      " 읽기 전용 - 외부: 조회 가능, 수정 불가 / 클래스 내부: 둘 다 가능
+    
+        variable6 TYPE REF TO class_name,      " 클래스 참조
+        variable7 TYPE REF TO if_interface,    " 인터페이스 참조
+        variable8 TYPE REF TO data.            " 타입 참조
+ENDCLASS.
+
+```
