Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -12,6 +12,7 @@
 
 - ABAP 클래스는 DEFINITION에서 구조를 선언하고, IMPLEMENTATION에서 동작을 구현
 ```abap
+*************** 클래스 정의 (CLASS DEFINITION) ****************
 CLASS class_name DEFINITION.
   TYPES: local_type TYPE i.                   " 타입 정의
   CONSTANTS: gc_max TYPE i VALUE 100.         " 상수 정의
