Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -11,6 +11,7 @@
 </br>
 
 - ABAP 클래스는 DEFINITION에서 구조를 선언하고, IMPLEMENTATION에서 동작을 구현
+- Public 속성은 외부 접근 가능, Private 속성은 내부 전용이며 READ-ONLY는 외부 수정만 제한
 ```abap
 *************** 클래스 정의 (CLASS DEFINITION) ****************
 CLASS class_name DEFINITION.
