Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -39,11 +39,10 @@ CLASS class_name DEFINITION.
   PUBLIC SECTION.
     " 정적 속성 (Static Attribute)
     " 클래스당 1개만 존재
-    CLASS-DATA:
-      gv_n_o_vehicles TYPE i.                " 전체 객체가 공유
+    CLASS-DATA: gv_n_o_vehicles TYPE i.           " 전체 객체가 공유
   PRIVATE SECTION.
     " 인스턴스 속성 (Instance Attribute)
     " 객체 생성 시마다 개별로 생성
-    DATA: variable5 TYPE string READ-ONLY.   " 읽기 전용 - 외부: 조회 가능, 수정 불가 / 클래스 내부: 둘 다 가능
+    DATA: variable5 TYPE string READ-ONLY.       " 읽기 전용 - 외부: 조회 가능, 수정 불가 / 클래스 내부: 둘 다 가능
 ENDCLASS.
 ```
