Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -26,3 +26,23 @@ CLASS class_name DEFINITION.
                                                           " 클래스 내부: 둘 다 가능
 ENDCLASS.
 ```
+```abap
+*************** 메서드 정의 (METHODS Syntax) ****************
+CLASS class_name DEFINITION.
+  PUBLIC SECTION.
+    METHODS method_name
+      IMPORTING         iv_par TYPE type_name    " 입력 파라미터
+      EXPORTING         ev_par TYPE type_name    " 출력 파라미터
+      CHANGING          cv_par TYPE type_name    " 입·출력 파라미터
+      RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (단일)
+      EXCEPTIONS  exception.                  " Classic Exception
+      RAISING   cx_exception_class.           " Class-based Exception
+ENDCLASS.
+
+*************** 메서드 구현 (METHOD IMPLEMENTATION) ****************
+CLASS class_name IMPLEMENTATION.
+  METHOD method_name.
+    " 메서드 동작 로직
+  ENDMETHOD.
+ENDCLASS.
+```
