--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -34,7 +34,7 @@ CLASS class_name DEFINITION.
       IMPORTING         iv_par TYPE type_name    " 입력 파라미터
       EXPORTING         ev_par TYPE type_name    " 출력 파라미터
       CHANGING          cv_par TYPE type_name    " 입·출력 파라미터
-      RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (단일)
+      RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (메서드 실행 결과를 단일 값으로 반환)
       EXCEPTIONS  exception.                  " Classic Exception
       RAISING   cx_exception_class.           " Class-based Exception
 ENDCLASS.
