Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -37,12 +37,16 @@ CLASS class_name DEFINITION.
       RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (메서드 실행 결과를 단일 값으로 반환)
       EXCEPTIONS  exception.                  " Classic Exception
       RAISING   cx_exception_class.           " Class-based Exception
+    CLASS-METHODS static_method.               " 정적 메서드
 ENDCLASS.
 
 *************** 메서드 구현 (METHOD IMPLEMENTATION) ****************
 CLASS class_name IMPLEMENTATION.
   METHOD method_name.
-    " 메서드 동작 로직
+    " 인스턴스 메서드 로직
+  ENDMETHOD.
+  METHOD static_method.
+    " 정적 메서드 로직
   ENDMETHOD.
 ENDCLASS.
 ```
