--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -10,7 +10,8 @@
 ## < ABAP 클래스 정의 기본 구조 >
 </br>
 
-- ABAP 클래스는 DEFINITION에서 구조를 선언하고, IMPLEMENTATION에서 동작을 구현
+- `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
+- `DATA` 는 객체마다 따로 생기는 변수, `CLASS-DATA` 는 클래스 전체가 하나를 공유하는 변수
 - Public 속성은 외부 접근 가능, Private 속성은 내부 전용이며 READ-ONLY는 외부 수정만 제한
 ```abap
 *************** 클래스 정의 (CLASS DEFINITION) ****************
