Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -52,3 +52,52 @@ CLASS class_name IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- local class 만들기 실습
+```abap
+REPORT ZBC401_03_MAIN.
+TYPE-POOLS icon.
+
+*************** 클래스 정의 (CLASS DEFINITION) ****************
+CLASS lcl_airplane DEFINITION.
+  PUBLIC SECTION.
+    METHODS: set_attributes IMPORTING iv_name TYPE string
+                                      iv_planetype TYPE saplane-planetype,
+             display_attributes.
+    CLASS-METHODS: display_gv_n_o_airplanes.
+  PRIVATE SECTION.
+    CONSTANTS: c_pos_l TYPE I VALUE 30.
+    DATA: mv_name TYPE string,
+          mv_planetype TYPE saplane-planetype.
+    CLASS-DATA: gv_n_o_airplanes TYPE I.
+ENDCLASS.
+
+*************** 클래스 구현 (CLASS IMPLEMENTATION) ****************
+CLASS lcl_airplane IMPLEMENTATION.
+  METHOD set_attributes.
+    mv_name = iv_name.
+    mv_planetype = iv_planetype.
+    gv_n_o_airplanes = gv_n_o_airplanes + 1.
+  ENDMETHOD.
+
+  METHOD display_attributes.
+    WRITE:/ icon_ws_plane AS ICON,
+          / 'Name: ', AT c_pos_l mv_name,
+          / 'Planetype: ', AT c_pos_l mv_planetype.
+  ENDMETHOD.
+
+  METHOD display_gv_n_o_airplanes.
+    WRITE:/ 'Number of airplane: ', gv_n_o_airplanes.
+  ENDMETHOD.
+ENDCLASS.
+```
