Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -52,6 +52,30 @@ CLASS class_name IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+
+```abap
+*************** 클래스 정의 ****************
+CLASS <class> DEFINITION.
+  PUBLIC SECTION.
+    METHODS <inst_meth>.
+    CLASS-METHODS <static_meth>.
+  PRIVATE SECTION.
+    DATA mv_attr TYPE <type>.
+    CLASS-DATA gv_attr TYPE i.
+ENDCLASS.
+
+*************** 클래스 구현 ****************
+CLASS <class> IMPLEMENTATION.
+  METHOD <inst_meth>. ENDMETHOD.
+  METHOD <static_meth>. ENDMETHOD.
+ENDCLASS.
+
+*************** 객체 생성 및 호출 ****************
+DATA go_obj TYPE REF TO <class>.
+CREATE OBJECT go_obj.
+CALL METHOD go_obj-><inst_meth>.
+CALL METHOD <class>=><static_meth>.
+```
 </br>
 </br>
 
