Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -52,7 +52,10 @@ CLASS class_name IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
+</br>
+</br>
 
+### 2) ABAP 클래스 사용 패턴 (객체 생성·호출)
 ```abap
 *************** 클래스 정의 ****************
 CLASS <class> DEFINITION.
