Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -10,6 +10,7 @@
 ## < ABAP 클래스 정의 기본 구조 >
 </br>
 
+### 1) ABAP 클래스 개념 정리 (METHODS · DATA · 접근 제어)
 - `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
 - `DATA` 는 객체마다 따로 생기는 변수, `CLASS-DATA` 는 클래스 전체가 하나를 공유하는 변수
 - Static Method(`CLASS-METHODS`) 안에서는 Static 컴포넌트(`CLASS-DATA`)만 직접 접근 가능
