Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -10,7 +10,7 @@
 ## < ABAP 클래스 정의 기본 구조 >
 </br>
 
-### 1) ABAP 클래스 개념 정리 (METHODS · DATA · 접근 제어)
+### 1) ABAP 클래스 구조와 호출 방식 정리
 - `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
 - `DATA` 는 객체마다 따로 생기는 변수, `CLASS-DATA` 는 클래스 전체가 하나를 공유하는 변수
 - Static Method(`CLASS-METHODS`) 안에서는 Static 컴포넌트(`CLASS-DATA`)만 직접 접근 가능
@@ -53,10 +53,6 @@ CLASS class_name IMPLEMENTATION.
   ENDMETHOD.
 ENDCLASS.
 ```
-</br>
-</br>
-
-### 2) ABAP 클래스 사용 패턴 (객체 생성·호출)
 ```abap
 *************** 클래스 정의 ****************
 CLASS <class> DEFINITION.
@@ -79,6 +75,26 @@ DATA go_obj TYPE REF TO <class>.
 CREATE OBJECT go_obj.
 CALL METHOD go_obj-><inst_meth>.
 CALL METHOD <class>=><static_meth>.
+```
+</br>
+</br>
+
+### 2) ABAP 객체 참조 정리
+- 참조 대입(=)은 객체를 복사하지 않고 같은 객체를 함께 가리킴
+- `go_vehicle1` , `go_vehicle2` → 동일 객체, `go_vehicle3` → 별도 객체
+- 같은 객체를 참조하므로 `go_vehicle1` 으로 변경한 내용은 `go_vehicle2` 에서도 그대로 보임
+```abap
+*************** 객체 참조 (Reference) ****************
+DATA: go_vehicle1 TYPE REF TO lcl_vehicle,
+      go_vehicle2 LIKE go_vehicle1,
+      go_vehicle3 LIKE go_vehicle1.
+
+CREATE OBJECT go_vehicle1.
+go_vehicle2 = go_vehicle1.    " 같은 객체를 참조 (참조 복사)
+CREATE OBJECT go_vehicle3.    " 새로운 객체 생성
+
+" go_vehicle1, go_vehicle2 → 동일 객체
+" go_vehicle3             → 별도 객체
 ```
 </br>
 </br>
