Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -99,6 +99,28 @@ CREATE OBJECT go_vehicle3.    " 새로운 객체 생성
 </br>
 </br>
 
+### 3) ABAP 객체 참조 테이블 (TABLE OF REF) 사용 패턴
+- `TABLE OF REF TO` 는 객체 자체를 테이블에 저장하는 것이 아니라, 객체를 가리키는 참조(주소) 를 저장함
+- 실제 데이터는 객체 안에 있고, 테이블에는 그 객체로 가는 포인터만 존재
+```abap
+*************** 객체 참조 테이블 (Multiple Instantiation) ****************
+DATA:
+  go_obj   TYPE REF TO <class>,                 " 단일 객체 참조
+  gt_objs  TYPE TABLE OF REF TO <class>.        " 객체 참조를 담는 내부테이블
+
+CREATE OBJECT go_obj.
+APPEND go_obj TO gt_objs.    " 첫 번째 객체 참조 저장
+
+CREATE OBJECT go_obj.
+APPEND go_obj TO gt_objs.    " 두 번째 객체 참조 저장
+
+*************** 객체 참조 테이블 접근 ****************
+gt_objs[ 1 ]-><inst_meth>( ).    " 1번째 객체의 인스턴스 메서드 호출
+gt_objs[ 2 ]-><static_meth>( ).  " 정적 메서드 호출 (클래스 공용)
+```
+</br>
+</br>
+
 ---
 
 </br>
