Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -11,8 +11,8 @@
 </br>
 
 ### 1) ABAP 클래스 구조와 호출 방식 정리
-- `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
 - `DATA` 는 객체마다 따로 생기는 변수, `CLASS-DATA` 는 클래스 전체가 하나를 공유하는 변수
+- `METHODS` 는 객체(인스턴스) 생성 후 호출, `CLASS-METHODS` 는 객체 없이 클래스명으로 바로 호출
 - Static Method(`CLASS-METHODS`) 안에서는 Static 컴포넌트(`CLASS-DATA`)만 직접 접근 가능
 - Public 속성은 외부 접근 가능, Private 속성은 내부 전용이며 READ-ONLY는 외부 수정만 제한
 ```abap
@@ -38,21 +38,7 @@ CLASS class_name DEFINITION.
       EXPORTING         ev_par TYPE type_name    " 출력 파라미터
       CHANGING          cv_par TYPE type_name    " 입·출력 파라미터
       RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (메서드 실행 결과를 단일 값으로 반환)
-      EXCEPTIONS  exception.                  " Classic Exception
-      RAISING   cx_exception_class.           " Class-based Exception
-    CLASS-METHODS static_method.               " 정적 메서드
-ENDCLASS.
-
-*************** 메서드 구현 (METHOD IMPLEMENTATION) ****************
-CLASS class_name IMPLEMENTATION.
-  METHOD method_name.
-    " 인스턴스 메서드 로직
-  ENDMETHOD.
-  METHOD static_method.
-    " 정적 메서드 로직
-  ENDMETHOD.
-ENDCLASS.
-```
+      EXCEPTIONS  exception.                성 없이 호출 가능
 ```abap
 *************** 클래스 정의 ****************
 CLASS <class> DEFINITION.
