--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -38,7 +38,22 @@ CLASS class_name DEFINITION.
       EXPORTING         ev_par TYPE type_name    " 출력 파라미터
       CHANGING          cv_par TYPE type_name    " 입·출력 파라미터
       RETURNING VALUE(rv_par)  TYPE type_name    " 반환값 (메서드 실행 결과를 단일 값으로 반환)
-      EXCEPTIONS  exception.                성 없이 호출 가능
+      EXCEPTIONS  exception.                  " Classic Exception
+      RAISING   cx_exception_class.           " Class-based Exception
+    CLASS-METHODS static_method.               " 정적 메서드
+ENDCLASS.
+
+*************** 메서드 구현 (METHOD IMPLEMENTATION) ****************
+CLASS class_name IMPLEMENTATION.
+  METHOD method_name.
+    " 인스턴스 메서드 로직
+  ENDMETHOD.
+  METHOD static_method.
+    " 정적 메서드 로직
+  ENDMETHOD.
+ENDCLASS.
+```
+- 정적 메서드는 객체 생성 없이 호출 가능
 ```abap
 *************** 클래스 정의 ****************
 CLASS <class> DEFINITION.
