--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -77,6 +77,40 @@ CREATE OBJECT go_obj.
 CALL METHOD go_obj-><inst_meth>.
 CALL METHOD <class>=><static_meth>.
 ```
+```abap
+REPORT ZPROGB03_0036.
+
+*************** 클래스 정의 ****************
+CLASS lcl_vehicle DEFINITION.
+  PUBLIC SECTION.  " 외부에서 접근이 가능
+   METHODS: set_attribute IMPORTING iv_make TYPE s_make
+                                    iv_mode TYPE s_model,
+            display_attributes.
+   CLASS-METHODS: display_global_vehicles.
+  PRIVATE SECTION. " 외부에서 접근이 불가능
+   DATA: mv_make TYPE s_make,
+         mv_model TYPE s_model.
+   CLASS-DATA: gv_vehicles TYPE I.
+ENDCLASS.
+
+*************** 클래스 구현 ****************
+CLASS lcl_vehicle IMPLEMENTATION.
+  METHOD set_attribute.  " instance Method
+    mv_make = iv_make.
+    mv_model = iv_mode.
+    gv_vehicles = gv_vehicles + 1.
+  ENDMETHOD.
+
+  METHOD display_attributes. " instance Method
+    WRITE:/ 'Make: ', mv_make,
+          / 'Model: ', mv_model.
+  ENDMETHOD.
+
+  METHOD display_global_vehicles.  " Static Method
+    WRITE:/ 'Number of vehicle: ', gv_vehicles.
+  ENDMETHOD.
+ENDCLASS.
+```
 </br>
 </br>
 
@@ -118,6 +152,34 @@ APPEND go_obj TO gt_objs.    " 두 번째 객체 참조 저장
 *************** 객체 참조 테이블 접근 ****************
 gt_objs[ 1 ]-><inst_meth>( ).    " 1번째 객체의 인스턴스 메서드 호출
 gt_objs[ 2 ]-><static_meth>( ).  " 정적 메서드 호출 (클래스 공용)
+```
+```abap
+START-OF-SELECTION.
+
+ DATA: go_vehicle TYPE REF TO lcl_vehicle.
+* DATA: go_vehicle2 TYPE REF TO lcl_vehicle.
+
+ DATA: gt_vehicle TYPE TABLE OF REF TO lcl_vehicle.
+
+ CREATE OBJECT go_vehicle.
+ CALL METHOD go_vehicle->set_attribute
+  EXPORTING iv_make = 'MK1'
+            iv_mode = 'MODEL1'.
+ APPEND go_vehicle TO gt_vehicle.
+
+ CREATE OBJECT go_vehicle.
+ CALL METHOD go_vehicle->set_attribute
+  EXPORTING iv_make = 'MK2'
+            iv_mode = 'MODEL2'.
+ APPEND go_vehicle TO gt_vehicle.
+
+* CALL METHOD go_vehicle1->display_attributes.
+* CALL METHOD go_vehicle2->display_attributes.
+* CALL METHOD go_vehicle1->display_global_vehicles.
+
+ gt_vehicle[ 1 ]->display_attributes( ).
+ gt_vehicle[ 2 ]->display_attributes( ).
+ gt_vehicle[ 2 ]->display_global_vehicles( ).
 ```
 </br>
 </br>
