Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -156,10 +156,12 @@ gt_objs[ 2 ]-><static_meth>( ).  " 정적 메서드 호출 (클래스 공용)
 ```abap
 START-OF-SELECTION.
 
+*************** 객체 참조 변수 선언 ****************
  DATA: go_vehicle TYPE REF TO lcl_vehicle.
 * DATA: go_vehicle2 TYPE REF TO lcl_vehicle.
  DATA: gt_vehicle TYPE TABLE OF REF TO lcl_vehicle.
 
+*************** 객체 생성 및 설정 ****************
  CREATE OBJECT go_vehicle.
  CALL METHOD go_vehicle->set_attribute
   EXPORTING iv_make = 'MK1'
@@ -172,10 +174,10 @@ START-OF-SELECTION.
             iv_mode = 'MODEL2'.
  APPEND go_vehicle TO gt_vehicle.
 
+*************** 객체 참조 테이블을 통한 메서드 호출 ****************
 * CALL METHOD go_vehicle1->display_attributes.
 * CALL METHOD go_vehicle2->display_attributes.
 * CALL METHOD go_vehicle1->display_global_vehicles.
-
  gt_vehicle[ 1 ]->display_attributes( ).
  gt_vehicle[ 2 ]->display_attributes( ).
  gt_vehicle[ 2 ]->display_global_vehicles( ).
