--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -186,6 +186,19 @@ START-OF-SELECTION.
 </br>
 </br>
 
+### 4) ABAP 최신 메서드 호출 문법 (→method( ))
+- 최신 메서드 호출은 `객체->메서드( )` 형식을 사용
+```abap
+*************** 메서드 호출 (Method Call) ****************
+DATA go_obj TYPE REF TO <class>.
+
+CREATE OBJECT go_obj.
+go_obj-><method>( ).
+```
+
+</br>
+</br>
+
 ---
 
 </br>
