Update 4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md

--- a/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
+++ b/ABAP 심화/4-1. 프로그래밍 객체지향 개발 - ABAP OBJECT(01.13).md
@@ -195,6 +195,14 @@ DATA go_obj TYPE REF TO <class>.
 CREATE OBJECT go_obj.
 go_obj-><method>( ).
 ```
+- 정적 메서드는 클래스 기준, 인스턴스 메서드는 객체 기준으로 호출
+```abap
+클래스명=>CLASS-METHOD( ).     " 가능 (정적 메서드)
+클래스명=>METHOD( ).           " ❌ 오류 (인스턴스 메서드)
+
+참조변수->METHOD( ).           " 가능 (인스턴스 메서드)
+참조변수->CLASS-METHOD( ).     " 가능 (정적 메서드, 문법상 허용)
+```
 
 </br>
 </br>
